--- a/index.html
+++ b/index.html
@@ -4,24 +4,6 @@
     <title>Placeholder Title</title>
   </head>
   <body>
-    <div id="pomodoro-app">
-  <div id="container">
-    <div id="timer">
-      <div id="time">
-        <span id="minutes">25</span>
-        <span id="colon">:</span>
-        <span id="seconds">00</span>
-      </div>
-      <div id="filler"></div>
-    </div>
-
-    <div id="buttons">
-      <button id="work">Work</button>
-      <button id="shortBreak">Short Break</button>
-      <button id="longBreak">Long Break</button>
-      <button id="stop">Stop</button>
-    </div>
-  </div>
-</div>
+    <p>Nothing to see here... move along.</p>
   </body>
 </html>
