--- a/pomodoro.html
+++ b/pomodoro.html
@@ -11,20 +11,23 @@
 <!-- partial:index.partial.html -->
 <div id="pomodoro-app">
   <div id="container">
+    
+    <div id="buttons">
+      <button id="work">Work</button>
+      <button id="shortBreak">Short Break</button>
+      <button id="longBreak">Long Break</button>
+    </div>
+    
     <div id="timer">
       <div id="time">
         <span id="minutes">25</span>
         <span id="colon">:</span>
         <span id="seconds">00</span>
       </div>
-      <div id="filler"></div>
     </div>
 
     <div id="buttons">
-      <button id="work">Work</button>
-      <button id="shortBreak">Short Break</button>
-      <button id="longBreak">Long Break</button>
-      <button id="stop">Stop</button>
+      <button id="stop">Reset</button>
     </div>
   </div>
 </div>
